<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TemanAddFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="5dp">

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/tambah_teman"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/edtNim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/masukkan_nim"/>

                <EditText
                    android:id="@+id/edtNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_nama_teman"
                    android:inputType="textPersonName"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtKelas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/masukkan_kelas"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/edtTlp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/masukkan_no_telepon"
                        android:inputType="phone" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/edtIg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_instagram"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnSimpan"
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan"/>

                <Button
                    android:id="@+id/btnTampil"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lihat_data_teman"/>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</FrameLayout>